# pymobile-mcp

./: .gitignore  CHANGELOG.md  KICKOFF.md  README.md  pyproject.toml
.codestable/brainstorms/pymobile-mcp-android-mvp/: brainstorm.md
.codestable/compound/: 2026-07-13-deterministic-bundle-fail-closed.md
.codestable/features/2026-07-07-android-app-system-tools/: android-app-system-tools-acceptance.md  android-app-system-tools-checklist.yaml  (+8 more)
.codestable/requirements/: CONTEXT.md
.github/workflows/: ci.yml  publish.yml
docs/: exception-triage-0.3.md  oracle-upgrade-playbook.md  regression-checklist.md
scripts/: assert_mobile_mcp_contract.py  capture_mobile_mcp_calls.py  capture_mobile_mcp_contract.py  compare_mobile_mcp_image_backends.py  contract_common.py  run_with_timeout.py  validate_mobile_mcp_source_coverage.py
src/pymobile_mcp/: __init__.py  cli.py  errors.py  server.py  stdio.py
tests/: all_devices_live_smoke.py  android_app_system_live_smoke.py  android_live_smoke.py  android_recording_crash_live_smoke.py  crash_tools_live_smoke.py  ios_app_lifecycle_live_smoke.py  ios_app_recording_crash_live_smoke.py  ios_live_smoke_support.py  ios_pmd3_wda_live_smoke.py  ios_system_helpers_live_smoke.py  mobile_mcp_scenario_runner.py  mobile_mcp_stdio_fixture_server.py  test_all_devices_live_smoke.py  test_black_box_contract.py  test_contract_registry.py  test_driver_qa_fixes.py  test_gray_feedback.py  test_ios_live_smoke_support.py
tests/fixtures/: mobile_mcp_call_results.json  mobile_mcp_core_tools.json  mobile_mcp_wire_default.json  mobile_mcp_wire_fleet.json
(+238 files in other folders)
