[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymobile-mcp"
version = "0.3.0"
description = "Pure Python MCP server for mobile automation — Android via uiautomator2, iOS via pymobiledevice3"
authors = [
    {name = "ByteTrue"}
]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
keywords = ["mcp", "mobile", "automation", "android", "ios", "uiautomator2", "pymobiledevice3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mcp==1.28.1",
    "uiautomator2>=3.2.0",
    "adbutils>=2.8.10",
    "pymobiledevice3>=9.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "structlog>=23.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
pymobile-mcp = "pymobile_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:xonsh"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
